<resources>
    <string name="app_name">Edified</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_quiz_fragment">QuizFragment</string>
    <string name="title_activity_add_course">AddCourse</string>
    <string name="facebook_app_id">1218800654901240</string>

    <string-array name="categories">
        <item>Arts and Humanities</item>
        <item>Business</item>
        <item>Computer Science</item>
        <item>Cyber Security</item>
        <item>Data Science</item>
        <item>Life Sciences</item>
    </string-array>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_course_description">CourseDescription</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="success">Success</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="USERS">users</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="add">Add</string>
    <string name="course_book">Course Book</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_choose_role">ChooseRole</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_add_quiz">AddQuiz</string>
    <string name="title_activity_add_question">AddQuestion</string>
    <string name="title_activity_results">Results</string>
</resources>
